update FetchTask